# TOMI

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  Main.py  README.md  autorun.sh  compile_core.sh  dep_install.sh  deploy.sh  expose_server.sh  flake.nix  guide-execute.txt  index.html  requirements.txt  run.sh
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
TOMI-project/: Main.py  WebserverFlask.py  main.py
TOMI-project/function/: DetectFace.py  PlaySound.py  SpeechToText.py
TOMI-project/functions/: chat2llm.py  stt.py  tts.py  voice_changer.py
TOMI-project/shared_datas/: mem.py
TOMI-project/templates/: index.html
TOMI-project/testEmotion/: EmotionRecognition.py
client/: __init__.py  audio.py  audio_pb2.py  audio_pb2_grpc.py  build.py  example.py
core-process/: WebserverFlask.py  core.py  interface.py
core-process/CalculateSend2Website/: process.py
core-process/functions/: chat2llm.py  playsound.py  recog_emo.py  stt.py  tts.py  voice_changer.py
core-process/out_folder/: enchanted_audio.sh
core-process/shared_datas/: mem.py
core-process/templates/: index.html
core-process/utils/: denoise.py  logging.py  shmem.py
fine-tuning-sst/: cvt2onnx.py  decode.py  evaluation.py  inference.py  push2hub.py  resample.py  test_stt_onnx_time.py  trainer.py  watch_hour_clips.py
fine-tuning-sst/preprocessing/: create_tsv.py  merge_and_export_dataset.py  watch_hour_clips.py
function/: DetectFace.py  PlaySound.py  SpeechToText.py
protos/: audio.proto
public/: index.html  requestToWebserver.js
serve-config/: Cargo.toml  Dockerfile
serve-config/src/: main.rs
server/: Cargo.toml  build.rs
server/src/: logging.rs  main.rs  shmem.rs
setup_install/: setup.cmd
(+4 files in other folders)
