[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing-subscriber = "0.3"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
shared_memory = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
byteorder = "1.4"
memmap2 = "0.9"
futures = "0.3"
prost = "0.12"
prost-types = "0.12"
tracing = "0.1"

[build-dependencies]
prost-build = "0.12"