[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.11", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
prost = "0.12"
hound = "3.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = "0.4"
chrono-tz = "0.8"
tokio-stream = "0.1.17"
futures-core = "0.3.31"

[build-dependencies]
tonic-build = "0.11"
